src/app/components/products/products/products.component.css
#topBar {
    margin-top: 1%;
    text-align: center;
}

#topBar button {
    margin-bottom: 1%;
}

#topBar mat-form-field {
    width: 20%;
}

img {
    width: 100%;
    height: 200px;
}

.cardTitle {
    margin-bottom: 1rem;
    text-align: center;
}

#logo {
    justify-content: center;
    margin-bottom: 1rem;
}

mat-card {
    width: 15vw;
    display: flex;
    justify-content: start;
    flex-direction: column;
    flex-wrap: wrap;
    margin: 1vw;
}

mat-card-actions {
    margin: auto;
}

mat-card-actions button {
    margin: 0 auto;
    margin-left: 1vw;
}

